톰캣 한방배포, 댓글 좋아요,싫어요 관련, 조회수기능

--- a/pom.xml
+++ b/pom.xml
@@ -49,11 +49,23 @@
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
+    
+     <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <server>indieworld__manager_text</server>
+                    <url>http://indieworld.hailrain.site:8080/manager/text</url>
+                    <path>/</path>
+                </configuration>
+            </plugin>
+    
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <release>15</release>
+          <release>14</release>
         </configuration>
       </plugin>
       <plugin>
@@ -61,6 +73,7 @@
         <version>3.2.3</version>
         <configuration>
           <warSourceDirectory>WebContent</warSourceDirectory>
+          <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
       </plugin>
     </plugins>
